# melice-starterkit

./: .gitignore  CMakeLists.txt  Makefile  README.md  customize.sh  mmkconfig.json
.github/workflows/: build-pdx.yaml
Source/: pdxinfo
Source/fonts/: Roobert-10-Bold.fnt
lib/: achievements.c  achievements.h  achievementtoast.c  achievementtoast.h  aimedshootingstyle.c  aimedshootingstyle.h  alignment.c  alignment.h  animation.c  animation.h  animationdefinition.c  animationdefinition.h  animationdirection.c  animationdirection.h  animationframe.c  animationframe.h  animationtype.c  animationtype.h  axe.h  base64.c  base64.h  bitmap.c  bitmap.h  bullet.c  bullet.h  burstshootingstyle.c  burstshootingstyle.h  camera.c  camera.h  circularshootingstyle.c  circularshootingstyle.h  controller.c  controller.h  counter.c  counter.h  crank.c  crank.h  dialog.c  dialog.h  dictionary.h  (+124 more)
melice-starterkit.xcodeproj/: project.pbxproj
melice-starterkit.xcodeproj/xcshareddata/xcschemes/: melice-starterkit Playdate.xcscheme  melice-starterkit Simulator.xcscheme
src/: classes.c  classes.h  common.h  counter.c  counter.h  eventbus.c  eventbus.h  events.h  explosion.c  explosion.h  gamescene.c  gamescene.h  image.c  image.h  layersprite.c  layersprite.h  main.c  stride.c  stride.h  text.c  text.h  timer.c  timer.h  titlescene.c  titlescene.h
